Deal with hosted JPMs
Signed-off-by: Neil Bartlett <njbartlett@gmail.com>